	* Rearrange directory structure to put rigs and rotators sources
	  under their own subdirectories.  Mike, W9MDB
        * rig_get_channel changed to add read_only flag
        * rigctl(d) f command also returns VFO now
        * caching of vfo, frequency, mode, and ptt speeds up rigctld for all
        * caching of kenwood/yaesu "IF" speeds up polling from WSJTX/JTDX

Version 3.3
        2018-08-12
        * New models, R&S xk2100, TRXMAnager, Meade LX200
        * HTML manual is now generated at 'make dist' so users don't
          need GNU Info tools installed.  TNX Greg, N1DAM for the suggestion.
        * Handle longer udev generated file names up to 512 characters
        * Add debug time stamps with new '-Z' option and '--debug-time-stamps'
          options to rigctl, rotctl, rigctld, and rotctld utilities.
        * rigctld/rotctld continue working after serial or TCP device
          disappears.
        * Updates and fixes to FT-817, K3, IC-7300, AOR 3030, TM-D710,
          OMNI VII, TH-D72, Flrig, TS-590, piHPSDR, TS-2000, and netrigctl.
        * Update utility manual pages (section 1) and remove their reference
          material from the Info manual so it only needs to be update in one
          file.
        * Add new general project manual pages (section 7) and edit the Info
          manual to match.  These should not change much so keeping them in
          sync should not be too much of a burden.  The Info manual may be
          removed at some point in the future.
        * Last planned release of the present API/ABI.  Future releases will
          require recompilation and relinking by client programs using the C
          library interface (programs that only use the network daemons should
          be unaffected).

Version 3.2
        2018-03-15
        * New models, IC-7850/IC-7851 in IC-785x.  Mike, W9MDB
        * Fix ft991_get_mode, Mike, W9MDB
        * New model, FT-891.  Mike, W9MDB
        * New Barrett 2050 backend, Mike, W9MDB