@@ -1754,11 +1754,12 @@ static int ar7030p_get_channel(RIG *rig, channel_t *chan, int read_only)
         rc = lockRx(rig, LOCK_0);
     }
 
-#warning Need to add setting rig to channel values
-
     if (!read_only)
     {
         // Set rig to channel values
+        rig_debug(RIG_DEBUG_ERR, "%s: please contact hamlib mailing list to implement this\n", __func__);
+        rig_debug(RIG_DEBUG_ERR, "%s: need to know if rig updates when channel read or not\n", __func__);
+        return -RIG_ENIMPL;
     }
 
     return (rc);
