@@ -416,11 +416,12 @@ int icr75_get_channel(RIG *rig, channel_t *chan, int read_only)
         strncpy(chan->channel_desc, (char *)(chanbuf + chan_len), 8);
     }
 
-#warning Need to add setting rig to channel values
-
     if (!read_only)
     {
         // Set rig to channel values
+        rig_debug(RIG_DEBUG_ERR, "%s: please contact hamlib mailing list to implement this\n", __func__);
+        rig_debug(RIG_DEBUG_ERR, "%s: need to know if rig updates when channel read or not\n", __func__);
+        return -RIG_ENIMPL;
     }
 
     return RIG_OK;
