@@ -649,11 +649,12 @@ int tmv7_get_channel(RIG *rig, channel_t *chan, int read_only)
         memcpy(chan->channel_desc, &ackbuf[10], 7);
     }
 
-#warning Need to add setting rig to channel values
-
     if (!read_only)
     {
         // Set rig to channel values
+        rig_debug(RIG_DEBUG_ERR, "%s: please contact hamlib mailing list to implement this\n", __func__);
+        rig_debug(RIG_DEBUG_ERR, "%s: need to know if rig updates when channel read or not\n", __func__);
+        return -RIG_ENIMPL;
     }
 
     return RIG_OK;
